--- a/src/Authentication/Signup/SignUp.scss
+++ b/src/Authentication/Signup/SignUp.scss
@@ -1,24 +1,20 @@
 $black-shadow: rgb(0 120 120 / 64%) 0px 5px 15px;
-
 .form {
   width: 500px;
   padding: 20px;
   -webkit-box-shadow: 2px 4px 10px 1px rgba(0, 0, 0, 0.47);
   box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
   background-color: #fff;
-
   &.dark {
     box-shadow: $black-shadow;
     background-color: #121212;
   }
-
   @media (max-width: 330px) {
     width: 300px;
   }
   @media (min-width: 331px) and (max-width: 600px) {
     width: 350px;
   }
-
   &-input {
     width: 100%;
   }
@@ -37,16 +33,15 @@ $black-shadow: rgb(0 120 120 / 64%) 0px 5px 15px;
   display: flex;
   justify-content: center;
   padding: 20px 0;
-
   & > * {
     margin: 0 5px;
   }
-
   & > a {
     color: #5a65f3;
     font-weight: bold;
   }
 }
+
 .forget-p {
   text-align: right;
 }
@@ -58,10 +53,28 @@ $black-shadow: rgb(0 120 120 / 64%) 0px 5px 15px;
   text-align: center;
   font-size: 20px;
 }
+
 .success {
   color: rgba(130, 214, 130, 0.795);
   font-weight: bold;
   margin: 20px 0;
   text-align: center;
   font-size: 20px;
+}
+
+.google-signin-wrapper {
+  width: 30px;
+  height: 30px;
+  margin-right: 0.5rem;
+}
+
+.google-signin {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.google-signin-text {
+  text-transform: initial;
+  font-size: 1rem;
 }
