--- a/src/Layouts/Layout.scss
+++ b/src/Layouts/Layout.scss
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
   padding: 20px 5px;
-
   @media (max-width: 600px) {
     display: none;
     visibility: hidden;
@@ -12,7 +11,6 @@
 .upgrade-img {
   width: 150px;
   margin: 10px auto;
-
   img {
     width: 90%;
     object-fit: contain;
@@ -27,10 +25,12 @@
   padding: 0 5px;
   // height: 100%;
 }
+
 .upgrade-desc {
   text-align: center;
   padding: 10px 0;
 }
+
 .upgrade-link {
   text-align: center;
   display: block;
@@ -38,27 +38,31 @@
   font-weight: 600;
   color: #1a22fc;
 }
+
 .upload-new {
   visibility: hidden;
   display: none;
 }
+
 .upload-img {
   img {
     width: 90%;
     height: 400px;
   }
 }
+
 .hbs-logo {
   &.layout {
     width: 50px;
     height: 50px;
-
     img {
       width: 100%;
       height: 100%;
     }
   }
+  margin-right: 0.2rem;
 }
+
 .layout-mobile {
   @media (max-width: 600px) {
     margin: 0 auto;
