--- a/src/pages/Dashboard/Dashboard.scss
+++ b/src/pages/Dashboard/Dashboard.scss
@@ -2,11 +2,9 @@
 // $box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
 // $box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px,
 //   #0000004d 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
-
 $box-shadow: rgba(8, 37, 133, 0.473) 0px 10px 36px 0px,
   rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
-
 .folders-info,
 .file-info {
   padding: 20px 0;
@@ -15,11 +13,12 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
     padding: 10px 0;
   }
 }
+
 .folders-view,
-.file-view,
 .filter-view {
   display: flex;
   flex-wrap: wrap;
+  flex: 1;
   // justify-content: space-between;
   @media (max-width: 600px) {
     justify-content: space-between;
@@ -27,7 +26,6 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
   }
   > * {
     margin: 11px;
-
     @media (max-width: 600px) {
       margin: 6px 2px;
     }
@@ -35,10 +33,26 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
       margin: 13.5px;
     }
   }
-
   // .file {
   //   margin-top: 30px;
   // }
+}
+
+.file-view {
+  display: flex;
+  flex-wrap: wrap;
+  flex: 1;
+  > * {
+    @media (max-width: 600px) {
+      margin: 0.8em 0.1858em;
+      // justify-content: space-between;
+    }
+    @media (min-width: 320px) and (max-width: 400px) {
+      margin: 0.8em 0.1858em;
+      // justify-content: space-between;
+    }
+    margin: 0.8em 0.3758em;
+  }
 }
 
 .filter-view {
@@ -59,9 +73,9 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
   padding: 0 5px;
   align-items: center;
 }
+
 .filterMobile {
   width: 100%;
-
   .m-greeting {
     &.dark {
       color: #ccc;
@@ -77,7 +91,6 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
         color: #999;
       }
     }
-
     &-name {
       font-size: 25px;
       color: #312f32;
@@ -88,7 +101,6 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
       }
     }
   }
-
   .m-storage {
     &-dashboard {
       display: grid;
@@ -99,39 +111,32 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
       // box-shadow: $blx-shadow;
       background-color: #5a65f3;
       // border: 1px solid #ececf2;
-
       padding: 20px 10px;
       color: #ffffff;
       font-weight: bold;
       border-radius: 10px;
       margin: 10px 0;
-
       &.dark {
         background-color: #121212;
         box-shadow: $black-shadow;
       }
-
       @media (min-width: 601px) {
         display: none;
         visibility: hidden;
       }
     }
-
     &-icon {
       width: 70px;
       height: 70px;
       border-radius: 15px;
       background-color: #a3a9df;
       // background-color: #5a65f3;
-
       padding: 4px;
-
       img {
         width: 100%;
         height: 100%;
       }
     }
-
     &-details {
       .m-storage-space {
         display: flex;
@@ -143,7 +148,6 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
           color: #ccc;
         }
       }
-
       .space-name {
         font-size: 16px;
         letter-spacing: 1px;
@@ -161,15 +165,12 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
       }
       .space-progress {
         background-color: #fff;
-
         border-radius: 10px;
         margin-top: 10px;
         border: 1px solid #1a22fc;
-
         &-bar {
           height: 8px;
           background-color: #1a22fc;
-
           border-radius: 10px;
         }
       }
@@ -181,14 +182,32 @@ $black-shadow: rgba(0, 120, 120, 0.5) 0px 5px 15px;
     flex-wrap: wrap;
     padding: 0 5px;
     margin: 30px 0;
-
     @media (min-width: 601px) {
       display: none;
       visibility: hidden;
     }
-
     & > * {
       margin: 8px 3px;
+    }
+  }
+}
+
+.welcome-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  height: 80vh;
+  h2 {
+    font-size: 2.5rem;
+  }
+  img {
+    width: 30%;
+    margin: 20px auto;
+    @media (min-width: 700px) {
+      width: 20%;
+      margin: 10px auto;
     }
   }
 }
