--- a/src/pages/FolderDetails/folderDetail.scss
+++ b/src/pages/FolderDetails/folderDetail.scss
@@ -1,8 +1,7 @@
 .folders-view.folderDetails {
   & > * {
-    margin: 0px 8px;
+    // margin: 0px 8px;
   }
-
   @media (max-width: 600px) {
     justify-content: space-between;
     padding: 0 5px;
