--- a/src/components/HomeFeatures/feature.scss
+++ b/src/components/HomeFeatures/feature.scss
@@ -4,19 +4,15 @@
   justify-content: space-evenly;
   align-items: center;
   grid-gap: 20px;
-
   margin-top: 50px;
   padding: 10px 0;
-
   @media (max-width: 600px) {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
   }
-
   &-header {
     text-align: center;
     margin-top: 20px;
-
     &-intro {
       padding: 10px 20px;
       background-color: #92a8d8;
@@ -25,7 +21,6 @@
       color: #110d0e;
       text-transform: uppercase;
     }
-
     &-greeting {
       padding: 20px 0;
       color: #110d0e;
@@ -33,32 +28,27 @@
       display: flex;
       justify-content: center;
       align-items: center;
-
       @media (max-width: 600px) {
         font-size: 25px;
       }
-
       & span.dark {
         color: #ccc;
       }
-
       @media (max-width: 900px) {
         flex-direction: column;
       }
-
       .alias {
         font-size: 18px;
         margin-left: 15px;
         color: #92a8d8;
       }
     }
-
     &-desc {
-      font-size: 20px;
+      font-size: 1.1rem;
       color: #979dac;
-
+      line-height: 1.8;
       @media (max-width: 600px) {
-        font-size: 17px;
+        font-size: 0.9rem;
       }
     }
   }
@@ -72,7 +62,6 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-
   & > * {
     margin: 10px 0;
   }
@@ -95,15 +84,14 @@
     }
   }
   &-desc {
-    font-size: 20px;
+    font-size: 1.1rem;
     color: #979dac;
-    // color: #92a8d8;
-
+    line-height: 1.5;
     @media (max-width: 900px) {
-      font-size: 15px;
+      font-size: 1.1rem;
     }
     @media (max-width: 600px) {
-      font-size: 18px;
+      font-size: 1rem;
     }
   }
 }
