--- a/src/components/ShowcaseSection/showcase.scss
+++ b/src/components/ShowcaseSection/showcase.scss
@@ -5,52 +5,42 @@
   grid-template-rows: auto;
   align-items: center;
   // margin-top: 50px;
-
   @media (max-width: 600px) {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
     grid-row-gap: 30px;
   }
-
   .images-showcase {
     width: 70%;
     height: 70%;
-
     @media (max-width: 600px) {
       margin: 0 auto;
     }
-
     img {
       width: 100%;
       height: 100%;
       object-fit: contain;
     }
   }
-
   .images-showcase.secTwo {
     width: 100%;
     height: 100%;
     margin: auto;
-
     @media (max-width: 600px) {
       margin: 0 auto;
     }
-
     img {
       width: 100%;
       height: 100%;
       object-fit: contain;
     }
   }
-
   .text-showcase {
     justify-self: center;
-
     &-title {
-      font-size: 50px;
+      font-size: 2.5rem;
       color: #110d0e;
       padding: 20px 0;
-
       @media (max-width: 900px) {
         font-size: 30px;
       }
@@ -63,11 +53,10 @@
     }
     &-desc {
       line-height: 2;
-      font-size: 20px;
+      font-size: 1.1rem;
       color: #979dac;
-
       @media (max-width: 900px) {
-        font-size: 18px;
+        font-size: 1rem;
       }
     }
     &-intro {
@@ -91,13 +80,14 @@
     }
   }
 }
+
 .sectionTwo {
   margin-top: 20px;
-
   @media (max-width: 600px) {
     margin-top: 70px;
   }
 }
+
 .showcase {
   margin-left: 5px;
 }
