--- a/src/Authentication/Login/Login.scss
+++ b/src/Authentication/Login/Login.scss
@@ -1,85 +1,86 @@
 $box-shadow: 2px 4px 10px 1px rgba(201, 201, 201, 0.47);
 $black-shadow: rgb(0 120 120 / 64%) 0px 5px 15px;
 .form {
-  width: 500px;
-  padding: 20px;
-  box-shadow: $box-shadow;
-  background-color: #fff;
-  border-radius: 10px;
-  &.dark {
-    box-shadow: $black-shadow;
-    background-color: #121212;
-    color: #ccc;
-  }
-  @media (max-width: 330px) {
-    width: 300px;
-  }
-  @media (min-width: 331px) and (max-width: 600px) {
-    width: 370px;
-  }
-  &-input {
-    width: 100%;
-  }
-  &-header {
-    margin: 20px 0;
-    text-align: center;
-    font-size: 20px;
-  }
-  &-btn {
-    width: 60%;
-    margin: auto;
-  }
+    width: 500px;
+    padding: 20px;
+    box-shadow: $box-shadow;
+    background-color: #fff;
+    border-radius: 10px;
+    &.dark {
+        box-shadow: $black-shadow;
+        background-color: #121212;
+        color: #ccc;
+    }
+    @media (max-width: 330px) {
+        width: 300px;
+    }
+    @media (min-width: 331px) and (max-width: 600px) {
+        width: 370px;
+    }
+    &-input {
+        width: 100%;
+    }
+    &-header {
+        margin: 20px 0;
+        text-align: center;
+        font-size: 20px;
+    }
+    &-btn {
+        width: 60%;
+        margin: auto;
+    }
 }
 
 .account {
-  display: flex;
-  justify-content: center;
-  // padding: 20px 0;
-  &.dark {
-    color: #ccc;
-    & > * {
-      color: #ccc;
+    display: flex;
+    justify-content: center;
+    // padding: 20px 0;
+    &.dark {
+        color: #ccc;
+        &>* {
+            color: #ccc;
+        }
     }
-  }
-  & > * {
-    margin: 0 5px;
-  }
-  & > a {
-    color: #5a65f3;
-    font-weight: bold;
-  }
+    &>* {
+        margin: 0 5px;
+    }
+    &>a {
+        color: #5a65f3;
+        font-weight: bold;
+    }
 }
 
 .forget-p {
-  text-align: right;
+    text-align: right;
 }
 
 .error {
-  color: red;
-  font-weight: bold;
-  margin: 20px 0;
-  text-align: center;
-  font-size: 20px;
+    color: red;
+    font-weight: bold;
+    margin: 20px 0;
+    text-align: center;
+    font-size: 20px;
 }
 
 .hbs-logo {
-  display: flex;
-  width: auto;
-  height: auto;
-  img {
-    width: 100%;
-  }
-  margin-bottom: 0.5em;
+    display: flex;
+    width: auto;
+    height: auto;
+    cursor: pointer;
+    img {
+        width: 100%;
+    }
+    margin-bottom: 0.5em;
 }
 
 .demo-header {
-  text-align: center;
-  color: #333;
+    text-align: center;
+    color: #333;
 }
 
 .forget-password {
-  padding-top: 10px;
-  text-align: right;
-  color: #5a65f3;
-  font-weight: bold;
+    padding-top: 10px;
+    text-align: right;
+    color: #5a65f3;
+    font-weight: bold;
 }
